# rag-search-mcp

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
.agents/profiles/: qa.md  validate.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci-fast.yml  dependency-review.yml  integration-ollama.yml  security-baseline.yml  supply-chain.yml
cmd/rag-config-doctor/: main.go  main_test.go
cmd/rag-index/: main.go  main_test.go
cmd/rag-install/: main.go  main_test.go
docker/: Dockerfile  docker-compose.yml
docs/: ci-required-checks.md  container-supply-chain-security.md  host-platform-support.md
lib/: .env.example  __init__.py  bootstrap.sh  common.sh  config.sh  doctor.sh  embedding_payload.py  ingest.py  install.sh  reindex.sh  server.py
shell/: bootstrap-smoke.sh  ci-build.sh  ci-container-only-go.sh  ci-container-supply-chain-policy-smoke.sh  ci-container-supply-chain-policy.sh  ci-fmt-check.sh  ci-golden-queries.sh  ci-govulncheck.sh  ci-host-portability.sh  ci-licenses-export.sh  ci-mod-tidy-check.sh  ci-sbom-go.sh  ci-test-cover.sh  ci-tool-versions.env  ci-toolchain-security.sh  ci-vet.sh  clean-install.sh  config-doctor.sh  doctor-verify-index.sh  doctor.sh  down.sh  go-runner-overrides-smoke.sh  go-runner.sh  host-path-resolver-smoke.sh  index.sh  install-anchore-tools.sh  install-bootstrap.sh  install.sh  lib.sh  logs.sh  reindex-status.sh  reindex.sh  up.sh
tests/: test_ingest.py  test_server.py
tools/: go.mod  go.sum  tools.go
(+249 files in other folders)
