[project]
name = "local-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "pypdf>=6.9.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
files = ["lib", "tests"]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
